# sea-battle

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  commands.json  vcpkg.json
src/: main.cpp
src/headers/: Attack.h  AttackFactory.h  Command.h  Commands.h  ControllerStartGame.h  Coord.h  CoordSkillUse.h  DoubleAttack.h  DoubleAttackFactory.h  DoubleAttackState.h  EndGameCommand.h  FileInteractionError.h  FileWrapper.h  Game.h  GameEnums.h  GameException.h  GameState.h  GetCoord.h  ISkill.h  ISkillFactory.h  ManagerShips.h  ManagerSkills.h  ManagerSkillsObserver.h  NoSkillsException.h  Observer.h  OutOfBoundsException.h  PrintMessageCommand.h  Scanner.h  ScannerFactory.h  ScannerResult.h  Serializer.h  SetCoordCommand.h  SetFileNameCommand.h  SetModeCommand.h  SetModeEndCommand.h  SetNumberMoveCommand.h  SetPlaceShipCommand.h  SetPlayerAttackCommand.h  SetSkillCoordCommand.h  Ship.h  (+8 more)
src/headers/Controllers/: ConsoleController.h  Controller.h
src/headers/IO/: Commands.h  ConsoleInput.h  ConsoleInputer.h  ConsolePrinterMessage.h  ConsoleShow_Table.h  Controller.h  Controller.hpp  IController.h  Input.h  Printer_Message.h  Printer_Table.h  View.h  View.hpp
src/headers/Loaders/: Loader.h  ManagerShipsTableLoader.h  ManagerSkillsLoader.h  ShooterLoader.h  SkillResultLoader.h
src/headers/Serializers/: CoordSerializer.h  ManagerShipsSerializer.h  ManagerSkillsSerializer.h  Serializer.h  ShipSerializer.h  ShooterSerializer.h  SkillResultSerializer.h  TableSerializer.h
src/headers/Views/: ConsoleView.h  View.h
src/saves/: 1.json  10.json  100.json  2.json  23413133243fewrf.json  24234123.json  25.json  271.json  3.json  new_test.json  test.json
src/source/: Attack.cpp  AttackFactory.cpp  Command.cpp  Commands.cpp  ControllerStartGame.cpp  Coord.cpp  CoordSkillUse.cpp  DoubleAttack.cpp  DoubleAttackFactory.cpp  EndGameCommand.cpp  FileInteractionError.cpp  FileWrapper.cpp  Game.cpp  GameException.cpp  GameState.cpp  GetCoord.cpp  ISkill.cpp  ISkillFactory.cpp  ManagerShips.cpp  ManagerShips.h  ManagerSkills.cpp  ManagerSkillsObserver.cpp  NoSkillsException.cpp  OutOfBoundsException.cpp  PrintMessageCommand.cpp  Scanner.cpp  ScannerFactory.cpp  Serializer.cpp  SetCoordCommand.cpp  SetFileNameCommand.cpp  SetModeCommand.cpp  SetModeEndCommand.cpp  SetNumberMoveCommand.cpp  SetPlaceShipCommand.cpp  SetPlayerAttackCommand.cpp  SetSkillCoordCommand.cpp  Ship.cpp  ShipPlacementException.cpp  ShipSerializer.cpp  Shooter.cpp  (+6 more)
src/source/Controllers/: ConsoleController.cpp  Controller.cpp
src/source/IO/: Commands.cpp  ConsoleInput.cpp  ConsoleInputer.cpp  ConsolePrinterMessage.cpp  ConsoleShow_Table.cpp  IController.cpp  Input.cpp  Printer_Message.cpp  Printer_Table.cpp
src/source/Loaders/: Loader.cpp  ManagerShipsTableLoader.cpp  ManagerSkillsLoader.cpp  ShooterLoader.cpp  SkillResultLoader.cpp
src/source/Serializers/: CoordSerializer.cpp  ManagerShipsSerializer.cpp  ManagerSkillsSerializer.cpp  Serializer.cpp  ShipSerializer.cpp  ShooterSerializer.cpp  SkillResultSerializer.cpp  TableSerializer.cpp
src/source/Views/: ConsoleView.cpp  View.cpp
